--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
         android:layout_below="@+id/app_bar"
         android:gravity="center"
         android:horizontalSpacing="@dimen/grid_horizontal_spacing"
-        android:numColumns="auto_fit"
+        android:numColumns="3"
         android:padding="@dimen/grid_padding"
         android:stretchMode="columnWidth"
         android:verticalSpacing="@dimen/grid_vertical_spacing" />
