Added Reveal Animation in Detailed View Added new background color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
 
     <color name="primaryTextColor">#FFFFFF</color>
     <color name="primaryTextColorTint">#99000000</color>
+    <color name="backgroundColor">#161C27</color>
 </resources>
