--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,10 +17,11 @@
         android:layout_below="@+id/app_bar"
         android:gravity="center"
         android:horizontalSpacing="@dimen/grid_horizontal_spacing"
-        android:numColumns="3"
+        android:numColumns="2"
         android:padding="@dimen/grid_padding"
         android:stretchMode="columnWidth"
-        android:verticalSpacing="@dimen/grid_vertical_spacing" />
+        android:verticalSpacing="@dimen/grid_vertical_spacing"
+        android:background="@color/backgroundColor"/>
 
 
 </RelativeLayout>
